[package]
name = "escrow_tutorial"
version = "0.1.0"
edition = "2021"

[features]
no-entrypoint = []

[lib]
name = "escrow_tutorial"
crate-type = ["cdylib", "lib"]

[dependencies]
arrayref = "0.3.7"
borsh = "1.5.1"
solana-program = "=1.18.15"
spl-token = { version = "4.0.1", features = ["no-entrypoint"]}
thiserror = "1.0.61"
